fix  header on mobile

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -180,6 +180,7 @@ body.is-blocked::before {
 
 @media screen and (max-width: 886px) {
     .header {
+        transition: none;
         &-nav , &-langs {
             display: none;
         }
